begin scaffolding model.py
Co-authored-by: jrr6 <jrr6@users.noreply.github.com>
Co-authored-by: Ed Bielawa <ebielawa@users.noreply.github.com>

--- a/datagen.ipynb
+++ b/datagen.ipynb
@@ -58,9 +58,9 @@
     "\n",
     "    return path_edges, path_edges_set.union(random_edges)\n",
     "\n",
-    "def generate_hampath_graph(verts: int) -> Data:\n",
+    "def generate_hampath_graph(verts: int, num_rand_edges) -> Data:\n",
     "    vertices = torch.tensor([[x] for x in range(verts)])\n",
-    "    _, all_edges = generate_random_edges(verts, NUM_RAND_EDGES)\n",
+    "    _, all_edges = generate_random_edges(verts, num_rand_edges)\n",
     "    edges_transposed = torch.tensor(np.array(list(map(list, generate_undirected_graph(all_edges)))))\n",
     "    data = Data(x=vertices, edge_index=edges_transposed.t().contiguous())\n",
     "    assert data.is_undirected()\n",
@@ -92,20 +92,8 @@
     }
    ],
    "source": [
-    "# edge_index = torch.tensor([[0, 1],\n",
-    "#                            [1, 0],\n",
-    "#                            [1, 2],\n",
-    "#                            [2, 1]], dtype=torch.long)\n",
-    "# x = torch.tensor([[0], [1], [2]], dtype=torch.float)\n",
-    "# data = Data(x=x, edge_index=edge_index.t().contiguous())\n",
-    "# assert data.is_undirected()\n",
-    "\n",
-    "# g = torch_geometric.utils.to_networkx(data, to_undirected=True)\n",
-    "# # pos = nx.spring_layout(g, seed=3113794652)\n",
-    "# # labels = nx.draw_networkx_labels(g, pos, font_size=22, font_color=\"whitesmoke\")\n",
-    "# nx.draw(g, with_labels = True)\n",
     "NUM_RAND_EDGES = 50\n",
-    "g = torch_geometric.utils.to_networkx(generate_hampath_graph(100), to_undirected=True)\n",
+    "g = torch_geometric.utils.to_networkx(generate_hampath_graph(100, NUM_RAND_EDGES), to_undirected=True)\n",
     "nx.draw(g, with_labels = True)"
    ]
   }
